# cpp-waste-recycling-PeterBiro

./: CMakeLists.txt  main.cpp
Src/: BottleCap.cpp  BottleCap.h  Dustbin.cpp  Dustbin.h  Dustbin9000.cpp  Dustbin9000.h  DustbinContentError.hpp  Garbage.cpp  Garbage.h  MetalGarbage.cpp  MetalGarbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h
WasteRecycling_Tests/: CMakeLists.txt
